# OMEGA-Kernel-Sovereign

./: .gitignore  COMMIT_MSG.tmp  README.md  pyproject.toml
.github/workflows/: ci.yml
architecture/: SOVEREIGN_TOPOLOGY.md
contracts/: README.md  __init__.py  indicator_contract.py  market_data_contract.py  position_contract.py
governance/: AIC-PARECER-MIG1-001.md  CEO-DIRECTIVE-024.md  CFO-RAT-20260624-002.md  DEC-GATE-MIG2-001.md  DEC-GATE-MIG3-001.md  DEC-MIG3-001.md  DECLARACAO_SOBERANIA_GATE0.md  ETAPA0-RELATORIO-CONCLUSAO-CONSELHO.md  MIGRATION_ALLOWLIST.md  RELATORIO-FINAL-ETAPA0-HOUSEKEEPING.md  SYNC_LOG.md  SYNC_PROTOCOL.md  TASK-0022-MIG2-CHARTER-AIC-001.md  TASK-0023-MIG3-CHARTER-AIC-001.md  TASK-0023-MIG3-CHARTER-PSA-001.md  V6_VALIDATION_REPORT.md
governance/adr/: ADR-008-runtime-soberano.md  ADR-009-launcher-soberano.md  ADR-010-fluxo-soberano.md  ADR-011-ambiente-soberano.md  ADR-012-plano-mestre.md  README.md
governance/knowledge_extraction/: BUG_REGISTRY.csv  DECISION_REGISTRY.csv  FIX_REGISTRY.csv  KNOWLEDGE_MASTER_INDEX.md  RUNTIME_REGISTRY.csv
indicator_engine/: __init__.py  ema.py  engine.py  rsi.py
market_data/: __init__.py  engine.py  validator.py
position_manager/: __init__.py  exposure.py  ledger.py  manager.py  validator.py
sivr/: __init__.py  config_sivr.json  data_adapter_mt5.py  execution_bridge.py  generate_dataset.py  logger.py  run_sivr.py  runner.py  sivr_bridge.py
tests/: conftest.py  test_governance.py  test_indicator_engine.py  test_market_data.py  test_position_manager.py  test_sivr.py  test_v6_baseline_validation.py
(+9 files in other folders)
