[project]
name = "omega-kernel-sovereign"
version = "6.0.0"
description = "OMEGA Kernel Sovereign - Institutional Trading System with Multi-Strategy Global Orchestrator and Adaptive Risk Management"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    # Adicionar dependências apenas via Task aprovada. Versões fixadas.
    "MetaTrader5==5.0.45",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
